# metaquill

./: .gitignore  LICENSE  README.md
metaquill/: Cargo.toml  elsevier.txt  pdf-info.csv
metaquill/licences/: licences.yml
metaquill/src/: arg_parser.rs  call.rs  document.rs  file_manager.rs  input.txt  json_format.rs  json_format1.rs  load.rs  main.rs  metadata.rs  read_file.rs  text_parser.rs
pdfs/labeled_pdfs/pdf_elsevier/: pdf-info.csv
pdfs/labeled_pdfs/pdf_springer/: pdf-info.csv
tag-pdf-to-text/: Cargo.toml  fake.txt
tag-pdf-to-text/src/: decoding.rs  document.rs  main.rs  pdf_object.rs  text_parser.rs
tag_pdf_to_text/: Cargo.toml
tag_pdf_to_text/src/: decoding.rs  document.rs  encoding.rs  lib.rs  pdf_object.rs  text_parser.rs
