[package]
name = "metaquill"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-license = "0.6.1"
lopdf = "0.35.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

encoding_rs = "0.8" #Encoding library
regex = "1.7" #Used to replace and to split author

# Logging
log = "0.4"
env_logger = "0.10"
