[package]
name = "metaquill"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-license = "0.6.1"
lopdf = "0.35.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

encoding_rs = "0.8" #Encoding library
regex = "1.7" #Used to replace and to split author

urlencoding = "2.1.3" #Encoding the title and author to url format
reqwest = "0.12.14" # Sends a api call to crossref
tokio = { version = "1.44.1", features = ["full"] } # Handles the wait for the api call
